--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,19 @@
 name: blu3id.uk
 production_url: https://blu3id.uk
 markdown: kramdown
-highlighter: null
+kramdown:
+  highlighter: rouge
+  syntax_highlighter_opts:
+    block:
+      line_numbers: true
+sass:
+  style: compressed
 include: [".well-known"]
+exclude: [".sass-cache", "Gemfile", "Gemfile.lock", "outlinks.json", "outlinks-check.json"]
+keep_files: ["og-preview/_og_previews.yml"]
+collections:
+  og-preview:
+    output: true
+compress_html:
+  clippings: all
+  comments: ["//<!--", "<![CDATA["]
